[gd_scene load_steps=5 format=3 uid="uid://bp0dfqx01lvgc"]

[ext_resource type="Shader" uid="uid://cmyxurc81lyux" path="res://shaders/beam.gdshader" id="1_tfc0x"]
[ext_resource type="AudioStream" uid="uid://c8xtim7sqmjvo" path="res://audios/Laser.wav" id="3_eevo3"]
[ext_resource type="Script" uid="uid://cd478fu3kt0rx" path="res://scripts/beam.gd" id="3_n1cvh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eevo3"]
shader = ExtResource("1_tfc0x")
shader_parameter/color_inner = Color(1, 1, 1, 1)
shader_parameter/color_outer = Color(0, 0, 0, 1)
shader_parameter/speed = 5.0
shader_parameter/frequency = 10.0
shader_parameter/amplitude = 0.1
shader_parameter/beam_width_max = 0.3
shader_parameter/ripple_speed = 30.0

[node name="Beam" type="Line2D"]
material = SubResource("ShaderMaterial_eevo3")
position = Vector2(72, 216)
texture_mode = 2
script = ExtResource("3_n1cvh")
collision_mask = 0
growth_speed = 1000.0
damage_interval = 0.25

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 140

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eevo3")
volume_db = 4.0
max_polyphony = 4
bus = &"Effect"

[node name="SoundTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_sound_timer_timeout"]
